--- a/_example/Dockerfile
+++ b/_example/Dockerfile
@@ -1,7 +1,10 @@
 FROM golang:1.20 AS build
+ENV GOPROXY=https://goproxy.cn/
+RUN mkdir -p "/src"
 COPY . /src
 WORKDIR /src
-RUN go build -trimpath -ldflags='-w -s' -o example main.go
-FROM busybox
+RUN go build -trimpath -ldflags="-w -s" -o example main.go
+
+FROM scratch
 COPY --from=build /src/example /example
-CMD [ "/example" ]
+CMD ["/example"]
